--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
                 </div>
                 <div class="clearer">&nbsp;</div>
             </div>
+            <div id="ben-header-bottom">
+            	<center>PLEASE TOUCH THE SCREEN FOR MORE INFORMATION</center>
+            </div>
         </div>
     	
         
