--- a/trunk/index.html
+++ b/trunk/index.html
@@ -64,8 +64,15 @@
                                         </td>
                                     </tr>
                                 </table>
-                                <div>
-                                
+                                <div class="ben-tabs-show">
+                                	<div id="movieinfo">
+                                    	<div id="movieinfo-image" class="ben-left">
+                                        	<img src="view/skin1/image/movieimage.png" />
+                                        </div>
+                                        <div id="moviecontent" class="ben-right">
+                                        </div>
+                                        <div class="clearer">&nbsp;</div>
+                                    </div>
                                 </div>
                             </div>
                             <div class="ben-info-banner ben-item">
