--- a/index.html
+++ b/index.html
@@ -65,11 +65,20 @@
                                     </tr>
                                 </table>
                                 <div class="ben-tabs-show">
-                                	<div id="movieinfo">
+                                	<div id="movieinfo" class="ben-tabs-item">
                                     	<div id="movieinfo-image" class="ben-left">
                                         	<img src="view/skin1/image/movieimage.png" />
                                         </div>
                                         <div id="moviecontent" class="ben-right">
+                                        	Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
+                                            
                                         </div>
                                         <div class="clearer">&nbsp;</div>
                                     </div>
