--- a/trunk/index.html
+++ b/trunk/index.html
@@ -123,7 +123,14 @@ $(document).ready(function(e) {
                                     </div>
                                     <div id="moviecontent" class="ben-right">
                                         Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
-                                        <center><iframe width="450" height="315" src="//www.youtube.com/embed/47_-pqoPDVQ?rel=0" frameborder="0" allowfullscreen></iframe></center>
+                                        <center>
+                                        	
+                                            <video width="450"  controls>
+                                              <source src="view/skin1/video/47 Ronin - Official Trailer (HD) Keanu Reeves.MP4" type="video/mp4">
+                                              
+                                            Your browser does not support the video tag.
+                                            </video>
+                                        </center>
                                         Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
                                         Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
                                         Khởi chiếu Từ 10/01/2014 đến 31/01/2014 Loại phim:Hoạt hình, Phiêu lưu Diễn viên:Charlie Rowe, Karl Urban, Angourie Rice Đạo diễn:Barry Cook, Neil Nightingale Thời lượng:1 tiếng 27 phút Phiên bản:Tiếng Anh với phụ đề Tiếng Việt Hãng: Cụm rạp:Cộng Hòa, Nam Sài Gòn, Diamond, Landmark, Hà Đông, Nha Trang, Đà Nẵng, Biên Hòa, Bình Dương, Phan Thiết, Cantavil
